--- a/main.html
+++ b/main.html
@@ -10,6 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	   <h1>Why I want to become a developer?</h1>
+	   <p>The reason i am switching to become developer is good future and good money. I think this job was meants to me as i was always obsessed with technologies</p>
 
 </body>
 
